third_party/WebKit/Source/core/paint/FirstMeaningfulPaintDetector.cpp
@@ -10,6 +10,7 @@
 #include "platform/Histogram.h"
 #include "platform/instrumentation/tracing/TraceEvent.h"
 #include "platform/loader/fetch/ResourceFetcher.h"
+#include "platform/wtf/Functional.h"
 
 namespace blink {
 
@@ -99,6 +100,9 @@ void FirstMeaningfulPaintDetector::NotifyPaint() {
   if (network2_quiet_reached_)
     return;
 
+  provisional_first_meaningful_paint_swap_ = 0.0;
+  RegisterNotifySwapTime(PaintEvent::kProvisionalFirstMeaningfulPaint);
+
   TRACE_EVENT_MARK_WITH_TIMESTAMP1(
       "loading,devtools.timeline", "firstMeaningfulPaintCandidate",
       TraceEvent::ToTraceTimestamp(provisional_first_meaningful_paint_),
@@ -181,12 +185,19 @@ void FirstMeaningfulPaintDetector::Network2QuietTimerFired(TimerBase*) {
     paint_timing_->SetFirstMeaningfulPaintCandidate(
         provisional_first_meaningful_paint_);
     // Enforce FirstContentfulPaint <= FirstMeaningfulPaint.
-    first_meaningful_paint2_quiet_ =
-        std::max(provisional_first_meaningful_paint_,
-                 paint_timing_->FirstContentfulPaint());
+    if (provisional_first_meaningful_paint_ <
+        paint_timing_->FirstContentfulPaint()) {
+      first_meaningful_paint2_quiet_ = paint_timing_->FirstContentfulPaint();
+      first_meaningful_paint2_quiet_swap_ =
+          paint_timing_->FirstContentfulPaintSwap();
+    } else {
+      first_meaningful_paint2_quiet_ = provisional_first_meaningful_paint_;
+      first_meaningful_paint2_quiet_swap_ =
+          provisional_first_meaningful_paint_swap_;
+    }
     // Report FirstMeaningfulPaint when the page reached network 2-quiet.
     paint_timing_->SetFirstMeaningfulPaint(
-        first_meaningful_paint2_quiet_,
+        first_meaningful_paint2_quiet_, first_meaningful_paint2_quiet_swap_,
         had_user_input_before_provisional_first_meaningful_paint_);
   }
   ReportHistograms();
@@ -232,6 +243,33 @@ void FirstMeaningfulPaintDetector::ReportHistograms() {
     had_network_quiet_histogram.Count(kHadNetwork0Quiet);
   } else if (first_meaningful_paint2_quiet_) {
     had_network_quiet_histogram.Count(kHadNetwork2Quiet);
+  }
+}
+
+void FirstMeaningfulPaintDetector::RegisterNotifySwapTime(PaintEvent event) {
+  paint_timing_->RegisterNotifySwapTime(
+      event, WTF::Bind(&FirstMeaningfulPaintDetector::ReportSwapTime,
+                       WrapCrossThreadWeakPersistent(this), event));
+}
+
+void FirstMeaningfulPaintDetector::ReportSwapTime(PaintEvent event,
+                                                  bool did_swap,
+                                                  double timestamp) {
+  // TODO(shaseley): Add UMAs here to see how often either of the following
+  // happen. In the first case, the FMP will be 0.0 if this is the provisional
+  // timestamp we end up using. In the second case, a swap timestamp of 0.0 is
+  // reported to PaintTiming because the |network2_quiet_timer_| already fired.
+  if (!did_swap)
+    return;
+  if (network2_quiet_reached_)
+    return;
+
+  switch (event) {
+    case PaintEvent::kProvisionalFirstMeaningfulPaint:
+      provisional_first_meaningful_paint_swap_ = timestamp;
+      return;
+    default:
+      NOTREACHED();
   }
 }
 
