third_party/WebKit/Source/core/paint/PaintTiming.cpp
@@ -5,6 +5,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "core/paint/PaintTiming.h"
 
+#include <memory>
+#include <utility>
+
 #include "core/dom/Document.h"
 #include "core/frame/LocalDOMWindow.h"
 #include "core/frame/LocalFrame.h"
@@ -100,6 +103,7 @@ void PaintTiming::SetFirstMeaningfulPaintCandidate(double timestamp) {
 
 void PaintTiming::SetFirstMeaningfulPaint(
     double stamp,
+    double swap_stamp,
     FirstMeaningfulPaintDetector::HadUserInput had_input) {
   DCHECK_EQ(first_meaningful_paint_, 0.0);
   TRACE_EVENT_MARK_WITH_TIMESTAMP2("loading,rail,devtools.timeline",
@@ -111,8 +115,8 @@ void PaintTiming::SetFirstMeaningfulPaint(
   // changes caused by user interactions wouldn't be considered as FMP.
   if (had_input == FirstMeaningfulPaintDetector::kNoUserInput) {
     first_meaningful_paint_ = stamp;
+    first_meaningful_paint_swap_ = swap_stamp;
     NotifyPaintTimingChanged();
-    RegisterNotifySwapTime(PaintEvent::kFirstMeaningfulPaint);
   }
 
   ReportUserInputHistogram(had_input);
@@ -180,6 +184,14 @@ void PaintTiming::SetFirstContentfulPaint(double stamp) {
 }
 
 void PaintTiming::RegisterNotifySwapTime(PaintEvent event) {
+  RegisterNotifySwapTime(event,
+                         WTF::Bind(&PaintTiming::ReportSwapTime,
+                                   WrapCrossThreadWeakPersistent(this), event));
+}
+
+void PaintTiming::RegisterNotifySwapTime(
+    PaintEvent event,
+    std::unique_ptr<WTF::Function<void(bool, double)>> callback) {
   // ReportSwapTime on layerTreeView will queue a swap-promise, the callback is
   // called when the swap for current render frame completes or fails to happen.
   if (!GetFrame() || !GetFrame()->GetPage())
@@ -187,9 +199,7 @@ void PaintTiming::RegisterNotifySwapTime(PaintEvent event) {
   if (WebLayerTreeView* layerTreeView =
           GetFrame()->GetPage()->GetChromeClient().GetWebLayerTreeView(
               GetFrame())) {
-    layerTreeView->NotifySwapTime(ConvertToBaseCallback(
-        WTF::Bind(&PaintTiming::ReportSwapTime,
-                  WrapCrossThreadWeakPersistent(this), event)));
+    layerTreeView->NotifySwapTime(ConvertToBaseCallback(std::move(callback)));
   }
 }
 
@@ -210,11 +220,9 @@ void PaintTiming::ReportSwapTime(PaintEvent event,
       if (performance)
         performance->AddFirstContentfulPaintTiming(first_contentful_paint_);
       return;
-    case PaintEvent::kFirstMeaningfulPaint:
-      first_meaningful_paint_swap_ = timestamp;
-      return;
+    default:
+      NOTREACHED();
   }
-  NOTREACHED();
 }
 
 }  // namespace blink
